--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
-    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
@@ -534,13 +533,6 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
-    <script>
-        // "#card-login > div > div > h1 > img"
-        // inver the color invert 70% of the image
-        document.querySelector("#card-login > div > div > h1 > img").style.filter = "invert(70%)";
-    </script>
 </body>
 
 </html>
