--- a/index.html
+++ b/index.html
@@ -490,8 +490,8 @@
                                                     <img style="height: 180px;" src="./images/telas 21- 47 - 59 - 76 -78.png" alt="">
                                                 </a>
                                             </div>
-                                            <div class="col-12">
-                                                <iframe src="https://edu.cebraspe.org.br/inep/mod/hvp/embed.php?id=2232" width="600" height="300" frameborder="0" allowfullscreen="allowfullscreen" title="Vídeo teste"></iframe>
+                                            <div class="col-12 d-flex justify-content-center">
+                                                <iframe src="https://edu.cebraspe.org.br/inep/mod/hvp/embed.php?id=2232" width="600" height="400" frameborder="0" allowfullscreen="allowfullscreen" title="Vídeo teste"></iframe>
                                                 <script src="https://edu.cebraspe.org.br/inep/mod/hvp/library/js/h5p-resizer.js" charset="UTF-8"></script>
                                             </div>
                                         </div>
@@ -1006,7 +1006,7 @@
                             </div>
                         </div>
 
-                        <!-- tela 35 -->
+                        <!-- tela 46 -->
 
                         <div class="item " data-dot="<span>Apresentação</span>">
                             <div class="d-md-flex" style="margin-top: 80px;">
@@ -1021,6 +1021,177 @@
                                                     <br>
                                                     <br> Quando o Fiscal Volante acompanhar o Participante com Boletim de Ocorrência de volta à Sala de Aplicação, deverá informar o caso ao Chefe de Sala, para que ele faça o devido registro no campo “observações”
                                                     da <b>Ata de Sala</b>.
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- tela 47 -->
+
+                        <div class="item " data-dot="<span>Apresentação</span>">
+                            <div class="d-md-flex" style="margin-top: 80px;">
+                                <div class="p-4 d-flex align-items-center w-100">
+                                    <div class="desc w-100">
+                                        <h4>Momento das Super Dicas!
+                                        </h4>
+                                        <div class="row justify-content-end">
+                                            <div class="col-12">
+                                                <p>
+                                                    Quanta coisa vimos até aqui! Que tal vermos algumas dicas agora? <br> Dê o play!
+                                                </p>
+                                            </div>
+                                            <div class="col-12 d-flex justify-content-center">
+                                                <a href="#jaja">
+                                                    <img style="height: 180px;" src="./images/telas 21- 47 - 59 - 76 -78.png" alt="">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- tela 23 -->
+
+                        <div class="item " data-dot="<span></span>">
+                            <div class="d-md-flex" style="margin-top: 30px;">
+                                <div class="text text-left p-4 px-xl-5 d-flex align-items-center">
+                                    <div class="desc w-100">
+                                        <h2 class="mb-4">4. Distribuição dos materiais de prova e início do Exame</h2>
+                                        <div class="row justify-content-end">
+                                            <div class="col-12">
+                                                <p>Após a autorização do Coordenador, por meio de sinal sonoro ou verbal, o Chefe de Sala deverá ler, integralmente, alguns avisos aos Participantes. Clique no ícone “Aviso ao Participante” para saber!</p>
+                                            </div>
+                                            <div class="col-12 d-flex justify-content-start">
+                                                <a href="#jaja">
+                                                    <img style="height: 100px;" src="./images/chefe-de-sala-v.0.0.1.gif" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="col-12">
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" checked>
+                                                    <label class="form-check-label">
+                                                        Perguntar ao Participante se ele tem Declaração de Comparecimento impressa para ser assinada. O Chefe de Sala deverá assiná-la, caso o Participante a apresente no momento da identificação, e orientar o Participante a guardá-la dentro do <b>Envelope Porta-Objetos</b> antes de entrar na sala..
+                                                    </label>
+                                                </div>
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" checked>
+                                                    <label class="form-check-label">
+                                                        Entregar o <b>Envelope Porta-Objetos</b> ao Participante e dar alguns avisos! Clique no ícone a seguir para conhecer!
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="col-12 d-flex justify-content-center">
+                                                <img src="./images/info.png" style="width:20%;">
+                                            </div>
+                                            <div class="col-12 d-flex justify-content-center">
+                                                <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#modal_slide-49">Aviso ao participante</button>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- tela 50 -->
+
+                        <div class="item " data-dot="<span></span>">
+                            <div class="d-md-flex" style="margin-top: 30px;">
+                                <div class="text text-left p-4 px-xl-5 d-flex align-items-center">
+                                    <div class="desc w-100">
+                                        <div class="row justify-content-end">
+                                            <div class="col-12">
+                                                <p>Após os avisos serem dados, o <b>Chefe de Sala</b> deverá (leia os <i>checklists</i>):.</p>
+                                            </div>
+                                            <div class="col-12 d-flex justify-content-start">
+                                                <a href="#jaja">
+                                                    <img style="height: 100px;" src="./images/chefe-de-sala-v.0.0.1.gif" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="col-12">
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" checked>
+                                                    <label class="form-check-label">
+                                                        Abrir os envelopes lacrados que contêm os <b>Cadernos de Questões</b> e <b>Cadernos de Respostas</b>, na frente dos Participantes.
+                                                    </label>
+                                                </div>
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" checked>
+                                                    <label class="form-check-label">
+                                                        Registrar na <b>Ata de Sala</b> o horário de abertura do envelope com o <b>Caderno de Questões</b>.
+                                                    </label>
+                                                </div>
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" checked>
+                                                    <label class="form-check-label">
+                                                        Fazer duas pilhas: uma com os <b>Cadernos de Questões</b> e outra com os <b>Cadernos de Respostas</b> personalizados.
+                                                    </label>
+                                                </div>
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" checked>
+                                                    <label class="form-check-label">
+                                                        Iniciar a distribuição nominal dos <b>Cadernos de Respostas</b> e, junto com eles, dos <b>Cadernos de Questões</b> e, se for o caso, da <b>Avaliação de Atendimento Especializado</b>, de acordo com os passos a seguir, atentando-se para:
+
+                                                    </label>
+                                                    <ul>
+                                                        <li>
+                                                            Os Participantes que possuem o mesmo nome ou nomes muito parecidos;
+                                                        </li>
+                                                        <li>
+                                                            Os casos de Participante transexual, travesti ou transgênero, que deverão ser chamados(as) pelo Nome Social (o primeiro nome que aparece no Caderno de Respostas).
+                                                        </li>
+                                                    </ul>
+                                                </div>
+
+
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- tela 51 -->
+
+                        <div class="item " data-dot="<span>Fique atento</span>">
+                            <div class="d-md-flex" style="margin-top: 10px;">
+                                <div class="text text-left p-4 px-xl-5 d-flex align-items-center">
+                                    <div class="desc w-100">
+                                        <div class="row justify-content-end">
+                                            <div class="col-12">
+                                                <p>A Parte Escrita do Exame é composta por quatro tarefas e deve ser realizada em, no máximo, 3 horas. Clique nos botões a seguir e conheça cada uma das tarefas.</p>
+                                            </div>
+                                            <div class="col-12 row">
+                                                <div class="row col-12 d-flex justify-content-around">
+                                                    <div class="col-12 row">
+                                                        <div class="col-2 d-flex flex-column justify-content-center">
+                                                            <img src="./images/tela51a v.0.0.1.png" width="100%">
+                                                        </div>
+                                                        <div class="col-10">
+                                                            <img src="./images/tela52 v.0.0.1.png" width="100%">
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-12 row">
+                                                        <div class="col-2 d-flex flex-column justify-content-center">
+                                                            <img src="./images/tela51b v.0.0.1.png" width="100%">
+                                                        </div>
+                                                        <div class="col-10">
+                                                            <img src="./images/tela53 v.0.0.1.png" width="100%">
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-12 row">
+                                                        <div class="col-2 d-flex flex-column justify-content-center">
+                                                            <img src="./images/tela51c v.0.0.1.png" width="100%">
+                                                        </div>
+                                                        <div class="col-10">
+                                                            <img src="./images/tela54 v.0.0.1.png" width="100%">
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -1361,6 +1532,39 @@
         </div>
     </div>
 
+    <!-- Modal slide 49 -->
+    <div class="modal fade" id="modal_slide-49" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Aviso ao Participante</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                </div>
+                <div class="modal-body row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <img src="./images/info.png" style="width: 20%;">
+                    </div>
+                    <div class="col-12">
+                        <ol type="1">
+                            <li>Pessoal, agora eu vou abrir os envelopes de Cadernos de Questões e de Cadernos de Respostas. Vejam que eles estão lacrados.</li>
+                            <li>Fiquem com o documento de identificação impresso com foto em mão, pois ele será conferido no momento da entrega dos materiais de provas.</li>
+                            <li>Vou chamar cada um de vocês pelo nome. Quem for chamado deverá levantar a mão e permanecer sentado para receber o Caderno de Questões e o Caderno de Respostas.</li>
+                            <li>Assim que receberem os materiais, confiram o nome de vocês no Caderno de Respostas.</li>
+                            <li>Vocês só poderão iniciar a prova após minha autorização.</li>
+                            <li>Vocês poderão acompanhar o tempo de prova por meio do relógio da sala.</li>
+                            <li>Não é permitida a saída com o Caderno de Questões.</li>
+                            <li>A ida ao banheiro será permitida a um Participante por vez, somente acompanhado por um Fiscal Volante. Vocês deverão fechar a prova e virá‐la com a capa para cima, antes de saírem da sala.</li>
+
+                        </ol>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -1385,6 +1589,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
